2021. 5. 7. Made tools/, and modified makefiles. [zm, app, tools]
2021. 5. 7. Renamed zBDisk to zBDisk2D. [zeo_bv2d_bdisk]
2021. 5. 7. Renamed zBBall* to zBBall3D*. [zeo_bv3d_bball, zeo_mshape3d]
2021. 5. 7. Renamed zAABB* to zAABB3D*. [zeo_bv3d_aabb, zeo_col_box]
2021. 5. 6. Modified zBBall and zBBallPL to compute the actual radius without a margin. [zeo_bv3d_bball]
2021. 5. 6. Debugged _zBBall4. [zeo_bv3d_bball]
2021. 5. 6. Reimplemented _zBBallTest? and _zBBallPrim with zSphere3DFrom?. [zeo_bv3d_bball]
2021. 5. 6. Added zSphere3DFrom2, zSphere3DFrom3 and zSphere3DFrom4. [zeo_shape3d_sphere]
2021. 5. 6. Implemented zBDisk and zBDiskPL. [zeo_bv2d, zeo_bv2d_bdisk]
2021. 5. 6. Added zDisk2DFrom2 and zDisk2DFrom3. [zeo_elem2d]
2021. 5. 6. Added zDisk2D class. [zeo_elem2d]
2021. 5. 6. Added zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. [zeo_elem2d]
2021. 5. 6. Added zeo_vec2d_list. [zeo_vec2d, zeo_vec2d_list]
2021. 5. 6. Added ZVEC2DZERO, ZVEC2DX and ZVEC2DY. [zeo_vec2d]
2021. 5. 6. Modified _zBBallInc. [zeo_bv3d_bball]
2021. 5. 6. Renamed zBBallPL to _zBBallPL, and newly created zBBallPL to reduce the risk of stack-overflow. [zeo_bv3_bball]
2021. 5. 6. Defined ZEO_BBALL_PN_THRESHOLD. [zeo_bv3_bball]
2021. 5. 5. Debugged zMShape3DBBall. [zeo_mshape3d]
2021. 5. 5. Added zMShape3DVertList and zMShape3DBBall. [zeo_mshape3d]
2021. 5. 5. Reordered objects. [src/makefile]
2021. 5. 5. Corrected examples to conform to the new specifications. [example]
2021. 5. 4. Renamed zTri3DListInsert to zTri3DListAdd missed in the previous revision. [zeo_elem3d_list]
2021. 5. 4. Modified methods for abstraction of zShape3D. [zeo_shape3d_*]
2021. 5. 4. Added z*3DFPrintZTK and reimplemented _zShape3D*FPrintZTK. [zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl]
2021. 5. 3. Modified zeo_bv3d_aabb. [zeo_bv3d_aabb]
2021. 5. 3. Reflected new file names to examples. [example]