@@ -1,38 +1,10 @@
-include ../config
+MAKEFILEGEN=`which zeda-makefile-gen`
 
-CONFIG=zeo-config
-BINDIR=$(PREFIX)/bin
-
-INCLUDE=`$(CONFIG) -I`
-LIB=`$(CONFIG) -L`
-DEF=`$(CONFIG) -D`
-LINK=`$(CONFIG) -l`
-
-CC=gcc
-CFLAGS=-ansi -Wall -O3 $(INCLUDE) $(LIB) $(DEF)
-
-COMPILE=$(CC) $(CFLAGS) -o $@ $< $(LINK)
-INSTALL=install -m 755
-UNINSTALL=rm -f
-
-TARGET=zeo_qhull zeo_gjk zeo_phconv zeo_stl2ztk mshape2gp
-
-#####################################################################
-all: $(TARGET)
-
-%: %.c
-	@echo " CC	" $<
-	@$(COMPILE)
+all:
+	@$(MAKEFILEGEN) app -ansi | make -f -
 clean:
-	@echo " CLEAN"
-	-@rm -f *.o *~ core $(TARGET)
-install: $(TARGET)
-ifneq ($(TARGET),)
-	@echo " INSTALL	" $^
-	@$(INSTALL) $^ $(BINDIR)
-endif
+	@$(MAKEFILEGEN) app -ansi | make -f - clean
+install:
+	@$(MAKEFILEGEN) app -ansi | make -f - install
 uninstall:
-ifneq ($(TARGET),)
-	@echo " UNINSTALL	" $(TARGET)
-	@$(UNINSTALL) $(BINDIR)/$(TARGET)
-endif
+	@$(MAKEFILEGEN) app -ansi | make -f - uninstall
