@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.1
+VERSION=1.9.2
 
-DEPENDENCY="zeda=1.5.7;zm=1.3.4"
+DEPENDENCY="zeda=1.5.10;zm=1.3.5"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
