@@ -1,0 +1,8 @@
+INCLUDE+=`zm-config -I`
+LIB+=`zm-config -L`
+DEF+=`zm-config -D`
+LINK+=`zm-config -l`
+
+ifeq ($(CONFIG_USE_DAE),y)
+	DEF += -D__ZEO_USE_DAE
+endif
