@@ -1,3 +1,4 @@
+2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
 2021. 5. 7. Made tools/, and modified makefiles. [zm, app, tools]
 2021. 5. 7. Renamed zBDisk to zBDisk2D. [zeo_bv2d_bdisk]
 2021. 5. 7. Renamed zBBall* to zBBall3D*. [zeo_bv3d_bball, zeo_mshape3d]
